# ternak-xiaomi-mimo

./: .env.example  .gitignore  PRD.md  README.md  email_list.example.txt  pyproject.toml
docs/: cli-guide.md  cloudflare-api-setup.md  cloudflare-setup.md
src/mimo/: __init__.py  _ansi.py  accounts_api_key_only.txt  batch.py  bot.py  bulk.py  bulk_mt.py  bulk_mt_run.log.jsonl  cf_setup.py  cli_encrypt.py  crypto.py  e2e.py  email_gen.py  refresh.py  register.py  setup_test.py
tests/: test_batch.py  test_bot.py  test_cf_setup.py  test_crypto.py  test_email_gen.py  test_har_match.py  test_refresh.py
